# CodeDesignDeltaEvaluator

./: .gitignore  README.md  api.py  console.py  constants.py  estadistics.py  eval.py  git_clone.py  main.py  neo4j.config  notas.txt  puml_generator.py  puml_observer.py  puml_parser.py  pyproject.toml  result_observer.py  result_queries.py  results.csv  results.json  setup.py  table.db  thresholds.json
CddeAPI/: api.py
Design/: ComunicationDiagram.plantuml  SequenceDiagranRelationship.plantuml  metric_calculator-result_obs.plantuml  metric_generator-result_obs.plantuml  parser-observer.plantuml  work_flow.plantuml
Desing/: ComunicationDiagram.plantuml  DAG.plantuml  SequenceDiagranRelationship.plantuml  metric_generator-result_obs.plantuml  parser-observer.plantuml  resultQueries-resultObserver.plantuml
Samples/: UML.plantuml  example.java
addons/: constants.py  obs_composable.py  obs_db_neo4j.py  obs_filter_parser.py  obs_neo4j.py  obs_printer.py  parser_parsimonius.py  parser_regex.py  parser_regex_uml.py  queries_cypher.py  result_obs_composable.py  result_obs_csv.py  result_obs_json.py  result_obs_printer.py  support_cpp.py  support_go.py  support_py.py
db_storer/: queries.py
docs/: propuesta.md
factories/: puml_generator.py  puml_observer.py  puml_parser.py
graphDB/: create_db_neo4j.py
graph_db/: create_db_neo4j.py
metricsCollecter/: queries.py
parser/: constants.py  main.py  parserUml.py  printer.py  puml_observer.py  puml_parser.py  pyreverse_util.py  regex_uml.py
parser_puml/: composable_observer.py  constants.py  observer_factory.py  (+7 more)
(+158 files in other folders)
