[tool.poetry]
name = "src"
version = "0.1.0"
description = "Code Design Delta Evaluator"
authors = ["Gonzalo Garcia Zurlo <gonzalogarciazurlo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.3,<4.0.0"
parsimonious = ">=0.10.0,<0.11.0"
gitpython = ">=3.1.44,<4.0.0"
pylint = ">=3.3.3,<4.0.0"
hpp2plantuml = ">=0.8.6,<0.9.0"
neo4j = ">=5.27.0,<6.0.0"
overrides = ">=7.7.0,<8.0.0"
pyyaml = ">=6.0.2,<7.0.0"
typer = ">=0.15.1,<0.16.0"
matplotlib = "^3.10.5"

[tool.poetry.scripts]
cdde = "src.cdde.cli:app"
goplantuml-install = "src.cdde.install_goplantuml:install_goplantuml"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
radon = "^6.0.1"
pylint = "^3.3.3"
mypy = "^1.14.1"

